fix nyaa scrapper config

--- a/internal/lib/extractor/nyaa.html
+++ b/internal/lib/extractor/nyaa.html
@@ -371,6 +371,8 @@
                             </a>
                         </td>
                         <td colspan="2">
+                            <a href="/view/1917100#comments" class="comments" title="9 comments">
+                                <i class="fa fa-comments-o"></i>9</a>
                             <a href="/view/1917100"
                                 title="[SubsPlease] Ameku Takao no Suiri Karte - 01 (1080p) [EC89E1D8].mkv">[SubsPlease]
                                 Ameku Takao no Suiri Karte - 01 (1080p) [EC89E1D8].mkv</a>
